log
Sun May  3 09:49:45 PM UTC 2026: 
 treemap.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:73:23: error: ‘TreeMap’ has no member named ‘left’
   73 |             aux = tree->left;
      |                       ^~
treemap.c:76:23: error: ‘TreeMap’ has no member named ‘right’
   76 |             aux = tree->right;
      |                       ^~
661ca07
Sun May  3 09:50:13 PM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/60
4cc062e
Sun May  3 09:51:54 PM UTC 2026: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/60
9342ff3
Sun May  3 09:54:29 PM UTC 2026: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|7
total_score: 10/60
d7cc907
Sun May  3 10:01:11 PM UTC 2026: 
 treemap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:59:12: error: too few arguments to function ‘is_equal’
   59 |         if(is_equal(aux->pair->key,key)){
      |            ^~~~~~~~
treemap.c:24:5: note: declared here
   24 | int is_equal(TreeMap* tree, void* key1, void* key2){
      |     ^~~~~~~~
3d5d823
Sun May  3 10:01:51 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|6
total_score: 20/60
e9e56ab
Sun May  3 10:04:06 PM UTC 2026: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:49:5: error: ‘map’ undeclared (first use in this function)
   49 |     map->lower_than = lower_than;
      |     ^~~
treemap.c:49:5: note: each undeclared identifier is reported only once for each function it appears in
c376635
Sun May  3 10:04:35 PM UTC 2026: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  13|5
total_score: 25/60
cad1934
